	* src/gnome/glade/print.glade: 
	  remove add_tearoffs property from GtkComboBoxes

	* Hello_ChangeLog

2006-03-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c:
	* lib/glib26/gkeyfile.c:
	* lib/glib26/gutils26.[ch]: Make g_strv_length available outside
	of the gkeyfile compatability library.

2006-03-04  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/glade/sched-xact.glade: Fix selection mode on
	transaction reminder and obsolete SX lists.

	* src/gnome/ui/icon-split.png: 
	* src/gnome/ui/icon-transfer.png: 
	Add split, transfer icons provided by Andrew Duggan
	<cmkrnl@speakeasy.net>.
	
	* src/gnome-utils/gnc-dir.h.in: 
	* src/gnome-utils/Makefile.am (gnc-dir.h):
	* src/gnome/gnc-plugin-page-register.c
	(gnc_plugin_page_register_actions)
	(gnc_plugin_page_register_class_init): Add registration, use of
	gnucash-provided (split, transactions) icons.  Bug#327647.

	* src/gnome-utils/gnc-menu-extensions.c (gnc_extension_path):
	Fixes to memory deallocation suggested by Phil Longstaff
	<plongstaff@newearth.org>.

2006-03-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-preferences.c:
	* src/gnome-utils/glade/preferences.glade:
	* src/gnome/schemas/apps_gnucash_general.schemas.in:
	* src/engine/Account.c:
	* src/app-utils/gnc-ui-util.c: Update the preferences dialog to
	allow any unicode character as the separator.

2006-03-03  David Hampton  <hampton@employees.org>

	* numerous: Convert the account separator from a single character
	to a character string.  This allows multibyte unicode characters
	to be the account separator character. Fixes 333061.  Reworked a
	couple of routines that pull account names into their component
	parts.  Also fixed a bug in the new account dialog when creating
	multiple accounts at once.

2006-03-03  Derek Atkins  <derek@ihtfp.com>

	* configure.in: error out on g-wrap-1.3, gcc4, and error-on-warning.
	  Fixes #330615.

2006-03-02  Joshua Sled  <jsled@asynchronous.org>
