@@ -20,7 +20,7 @@ CLEANFILES = $(schema_DATA)
 
 install-data-local:
 if GCONF_SCHEMAS_INSTALL
-	-mkdir -p $(GCONF_SCHEMA_CONFIG_SOURCE_DIRONLY)
+	-mkdir -p $(DESTDIR)$(GCONF_SCHEMA_CONFIG_SOURCE_DIRONLY)
 	-GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) gconftool-2 --makefile-install-rule $(srcdir)/$(schema_DATA)
 endif
 
